--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-    <title>LCARS SDK 4.0</title>
+    <title>LCARS ASTROHERPETOLOGY</title>
 
     <!-- Core JS -->
     <script type="text/javascript" src="lcars-sdk/core/jquery.js"></script>
