--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
 
     <!-- Project Specific CSS-->    
     <link rel="stylesheet" type="text/css" href="module.css">
+
+    <audio id="beep1"> 
+        <source src="audio/beep1.mp3" /> 
+    </audio>
+    <audio id="beep2"> 
+        <source src="audio/beep2.mp3" /> 
+    </audio>
+    <audio id="beep3"> 
+        <source src="audio/beep3.mp3" /> 
+    </audio>
+    <audio id="beep4"> 
+        <source src="audio/beep4.mp3" /> 
+    </audio>
+    <audio id="beep5"> 
+        <source src="audio/beep5.mp3" /> 
+    </audio>
+    
     
 </head>
 
