Added light override warning message

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <script type="text/javascript" src="lcars-sdk/widgets/sdk_scroll-button/scroll-button.js"></script>
 
     <!-- Project Specific JS-->        
-    <script type="text/javascript" src="module.js"></script>	   
+    <script type="text/javascript" src="module-references.js"></script>
+    <script type="text/javascript" src="module.js"></script>
+  
 
     <!-- Core and Widgets CSS-->    
     <link rel="stylesheet" type="text/css" href="lcars-sdk/core/lcars-sdk.css">
